refactor(exception):add  java.io.Serial